--- a/templates/static/Khach_Hang/register.html
+++ b/templates/static/Khach_Hang/register.html
@@ -26,9 +26,16 @@
                             <input type="password" name="matkhau" placeholder="Mật khẩu"/>
                             <input type="password" name="nhaplaimatkhau" placeholder="Nhập lại mật khẩu"/>
                             <input type="text" name="sodienthoai" placeholder="Số điện thoại"/>
-                            <input type="text", name="gioitinh" placeholder="Giới tính(1-Nam,0-Nữ)"/>
                             <input type="email" name="email" placeholder="Email"/>
                             <input type="text" name="diachi" placeholder="Địa chỉ"/>
+
+                            <label for="gioitinh">Giới tính:</label>
+
+                            <select name="gioitinh" id="gioitinh">
+                              <option value="1">Nam</option>
+                              <option value="0">Nữ</option>
+                            </select>
+
                             <div class="avatar-wrapper">
 	                        <img class="profile-pic" src="" />
 	                        <div class="upload-button">
