--- a/templates/static/Khach_Hang/register.html
+++ b/templates/static/Khach_Hang/register.html
@@ -43,16 +43,10 @@
 	                        </div>
 	                        <input class="file-upload" type="file" name="avatar" accept="image/*"/>
                              </div>
+                            <button type="submit" class="btn btn-default">Đăng ký
+                            </button>
                          {% csrf_token %}
 
-
-
-
-
-
-
-							<button type="submit" class="btn btn-default">Đăng ký</button>
-                            {% csrf_token %}
 
 
                               {% for message in messages %}
